# python-scripts-workspace

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: claude.md  settings.json
.claude/references/: api_keys.env.example  endpoints.yaml  style_guide.md
.claude/subagents/analyser/: agent.md
.claude/subagents/generator/: agent.md
.github/: TEMPLATE_DESCRIPTION.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  test.yml
clones/: homepage.html  pricing.html
proxy/: proxy.conf  setup_proxy.sh
scripts/groups/sdk_name/: __init__.py  client.py  utils.py
scripts/individual/: example_script.py  scrape_and_generate.md  scrape_and_generate.py
scripts/scrape_and_generate/: scrape_and_generate.md  scrape_and_generate.py  test_scrape_and_generate.py
tests/groups/sdk_name/: test_client.py
tests/individual/: test_example_script.py  test_scrape_and_generate.py
wireframes/: homepage.txt  pricing.txt
