[project]
name = "python-scripts-workspace"
version = "0.1.0"
description = "Template for creating, analysing, and validating Python scripts with Claude Code integration, UV package management, and proxy-aware networking."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
